rename on navbar

--- a/src/blocks.04-project/navbar/navbar.scss
+++ b/src/blocks.04-project/navbar/navbar.scss
@@ -1,4 +1,10 @@
 .navbar {
   background: #0062cc;
   padding: 7px 14px;
+
+  &__link {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
 }
