--- a/src/blocks.04-project/navbar/navbar.scss
+++ b/src/blocks.04-project/navbar/navbar.scss
@@ -6,5 +6,16 @@
     color: #fff;
     text-transform: uppercase;
     font-size: 14px;
+    cursor: pointer;
+
+    transition: all .3s ease-in;
+    text-decoration: none;
+
+    &:hover {
+      transition: all .3s ease-in;
+      color: #ccc;
+
+      text-decoration: none;
+    }
   }
 }
