--- a/src/blocks.04-project/logo/logo.scss
+++ b/src/blocks.04-project/logo/logo.scss
@@ -1,1 +1,13 @@
+.logo {
+
+  &__link {
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+
+    cursor: pointer;
+  }
+}
 
