--- a/src/blocks.04-project/content/content.scss
+++ b/src/blocks.04-project/content/content.scss
@@ -1,3 +1,10 @@
-.container {
-  background-color: #cce5ff;
+.wrapper {
+  background-color: #e6e6e6;
+  padding: 15px 0;
+}
+
+.content {
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
 }
