--- a/src/blocks.04-project/search/__button/search__button.scss
+++ b/src/blocks.04-project/search/__button/search__button.scss
@@ -1,6 +1,8 @@
 .search__button {
   border: none;
 
+  opacity: 0;
+
   background-color: #fff;
   background-image: url('./../images/loupe.svg');
   background-size: 50%;
@@ -11,7 +13,15 @@
   width: 50px;
   height: 50px;
 
+  position: absolute;
+  top: 0;
+  left: 0;
+
   transition: all .2s ease-in;
+
+  &_active {
+    opacity: 1;
+  }
 
   &:hover {
     transition: all .2s ease-in;
