--- a/src/blocks.04-project/search/__content/search__content.scss
+++ b/src/blocks.04-project/search/__content/search__content.scss
@@ -1,6 +1,3 @@
 .search__content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 }
