--- a/src/blocks.04-project/transparent/transparent.scss
+++ b/src/blocks.04-project/transparent/transparent.scss
@@ -1,8 +1,9 @@
 .transparent {
-  background-color: #e6e6e6;
-
+  max-width: 500px;
   width: 100%;
-  height: 100vh;
+  color: #333;
 
-  position: relative;
+  margin: 30px auto 0;
+  text-align: center;
+  border: 2px solid #333;
 }
