input task start to be

--- a/src/blocks.04-project/unicalInput/__element/unicalInput__element.scss
+++ b/src/blocks.04-project/unicalInput/__element/unicalInput__element.scss
@@ -1,2 +1,13 @@
 .unicalInput__element {
+  margin: 0;
+
+  outline: none;
+  padding: 8px 0px;
+
+  border-right: none;
+  border-left: none;
+  border-color: #0062cc;
+
+  color: #333;
+  font-size: 16px;
 }
