--- a/src/blocks.04-project/dots/__title/dots__title.scss
+++ b/src/blocks.04-project/dots/__title/dots__title.scss
@@ -1,6 +1,6 @@
 /*DOTS ON THE END*/
 
-.dots__title {
+/*.dots__title {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -9,18 +9,19 @@
 
   margin-top: 20px;
   color: #333;
-}
+}*/
 
 /*OPACITY ON THE END*/
 
-/*.dots__title {
+.dots__title {
   position: relative;
-  max-height: 45px;
+  max-height: 3em;
 
   margin-top: 20px;
   color: #333;
 
   overflow: hidden;
+  line-height: 1.5;
 
   &::after {
     content: '';
@@ -29,8 +30,9 @@
     right: 0;
 
     width: 100%;
-    height: 16px;
+    height: 1.5em;
     background: linear-gradient(to right, rgba(255, 255, 255, 0), white 100%);
+    pointer-events: none;
   }
-}*/
+}
 
