navigation finish and start newspaper

--- a/src/blocks.04-project/navigation/__item/navigation__item.scss
+++ b/src/blocks.04-project/navigation/__item/navigation__item.scss
@@ -1,7 +1,7 @@
 .navigation__item {
-  color: #fff;
-  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 
-  vertical-align: middle;
-  display: inline-block;
+  //display: inline-block;
 }
+
