--- a/src/blocks.04-project/navigation/__nav/navigation__nav.scss
+++ b/src/blocks.04-project/navigation/__nav/navigation__nav.scss
@@ -1,8 +1,9 @@
 .navigation__nav {
-  max-width: 90%;
+  max-width: 95%;
   width: 100%;
+  margin: 0 auto;
   padding: 0px;
-  height: 80px;
+  height: 40px;
 
-  background-color: #b21f2d;
+  background-color: #0062cc;
 }
