--- a/src/blocks.04-project/navigation/__link/navigation__link.scss
+++ b/src/blocks.04-project/navigation/__link/navigation__link.scss
@@ -1,5 +1,30 @@
 .navigation__link {
-  text-decoration: none;
   color: #fff;
   text-transform: uppercase;
+
+  display: inline-block;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 0px;
+    height: 2px;
+    background-color: #fff;
+
+    transition: all .2s ease-in;
+  }
+
+  &:hover {
+    text-decoration: none;
+    color: #fff;
+
+    &::after {
+      width: 100%;
+      transition: all .2s ease-in;
+    }
+  }
 }
