--- a/src/blocks.04-project/wrapp/wrapp.scss
+++ b/src/blocks.04-project/wrapp/wrapp.scss
@@ -1,8 +1,13 @@
 .wrapp {
   background-color: #e6e6e6;
-
   height: 100vh;
   width: 100%;
 
-  position: relative;
+  //position: relative;
+
+  // Второй способ
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
