--- a/src/blocks.04-project/wrapp/__block/wrapp__block.scss
+++ b/src/blocks.04-project/wrapp/__block/wrapp__block.scss
@@ -8,8 +8,10 @@
   font-weight: 600;
   text-transform: uppercase;
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+  // Первый способ
+  //position: absolute;
+  //top: 50%;
+  //left: 50%;
+  //transform: translate(-50%, -50%);
 }
