--- a/src/blocks.01-base/fi/variables.scss
+++ b/src/blocks.01-base/fi/variables.scss
@@ -2,5 +2,7 @@ $icons-font-folder: './font' !default;
 $icons-font-family: 'fi' !default;
 $icons: (
         "close": "\f101",
-        "star": "\f102"
+        "myStar": "\f102",
+        "star": "\f104",
+        "information": "\f102",
 ) !default;
