--- a/src/blocks.04-project/check/check.scss
+++ b/src/blocks.04-project/check/check.scss
@@ -1,6 +1,4 @@
-.filter__option {
-  color: #333;
-
+.check {
   input[type=checkbox] {
     display: none;
   }
@@ -13,6 +11,7 @@
   label {
     display: flex;
     align-items: center;
+    margin: 0;
 
     & > span {
       display: inline-block;
@@ -46,10 +45,5 @@
         opacity: 0;
       }
     }
-  }
-
-  span {
-    margin-left: 7px;
-    color: #FF6347;
   }
 }
