--- a/src/blocks.04-project/float/float.scss
+++ b/src/blocks.04-project/float/float.scss
@@ -16,8 +16,18 @@
     }
   }
 
-  &__item-2 {
-    margin-bottom: 15px;
+  &__item-2{
+    float: left;
+    @media screen and (max-width: 576px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__item-4 {
+    margin-top: 40px;
+    @media screen and (max-width: 576px) {
+      clear: both;
+    }
   }
 
   &__item-5 {
@@ -30,26 +40,19 @@
   }
 
   &__item-3 {
-    margin-left: 80px;
+    width: calc(100% - 80px);
+    float: right;
+    padding: 10px;
 
     @media screen and (max-width: 576px) {
-      clear: both;
       margin-left: 0;
+      width: 100%;
+      margin-bottom: 10px;
     }
   }
 
   &__item-1, &__item-2, &__item-3, &__item-4, &__header, &__footer{
     border: 2px solid #000;
-  }
-
-  &__sidebar {
-    border: 2px solid orange;
-    float: left;
-
-    @media screen and (max-width: 576px) {
-      width: 100%;
-      margin-bottom: 15px;
-    }
   }
 
   &__content {
